<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_journal_preview"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/country_image_preview"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/image_add_journal"
        android:layout_width="@dimen/add_image_size"
        android:layout_height="@dimen/add_image_size"
        android:contentDescription="@string/click_to_add_an_image_of_a_place"
        android:src="@drawable/ic_photo_camera"
        android:background="?attr/selectableItemBackground"

        app:layout_constraintBottom_toBottomOf="@+id/image_journal_preview"
        app:layout_constraintEnd_toEndOf="@+id/image_journal_preview"
        app:layout_constraintStart_toStartOf="@+id/image_journal_preview"
        app:layout_constraintTop_toTopOf="@+id/image_journal_preview" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        style="@style/TextInputLayoutStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/name_of_country"
        app:layout_constraintEnd_toEndOf="@+id/image_journal_preview"
        app:layout_constraintStart_toStartOf="@+id/image_journal_preview"
        app:layout_constraintTop_toBottomOf="@+id/image_journal_preview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextJournalName"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create_journal"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_a_memory"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>